infra/k8s/overlays/eks-nginx/patch-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartdoc-gateway
  namespace: smartdoc
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: REPLACE_ME_DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smartdoc-gateway
                port:
                  number: 8080
